client/templates/contact/details.import.less
.slide-in.contactSlideIn {
  width: 360px;
  &.right {
    right: -360px;
  }
  &.right.open {
    right: 0;
  }
}

.editable-text-container {
  position: relative;
  display: block;
  &::after{
    .glyphicon();
    position: absolute;
    right: 5px;
    top: 5px;
    content:"\270f";
    opacity: 0;
    transition: opacity 200ms linear;
  }
  &:hover {
    box-shadow: inset 0 -1px 0 0 #D2D2D2;
    &::after {
      opacity: 0.3;
    }
  }
}

.editable-text-container .editable-text {
  height: 34px;
  line-height: 34px;
  &.inline {
    display: inline-block;
    min-width: 50%;
  }
}

.wide-text-edit.inline {
  display: inline-block;
  width: 80%;
}
#contact-detail-screenName span::before{
  content:"@";
}
#contact-detail-phone .glyphicon {
  margin-right: 15px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.contact-slide-in {
  height: 100%;
}

@contact-top-section-padding-top: 60px;
@contact-top-section-media-row-height: 60px;
@contact-top-section-menu-line-height: 20px;
@contact-top-section-menu-padding-top-bottom: 25px;
@contact-top-section-height: @contact-top-section-padding-top + @contact-top-section-media-row-height + @contact-top-section-menu-line-height + (2 * @contact-top-section-menu-padding-top-bottom);

.contact-top-section {
  color:#fff;
  background: #2196f3;
  padding: @contact-top-section-padding-top 0 0 0;
  margin: 0;
  img {
    margin-right: 10px;
    height: 48px;
    width: 48px;
    background-color: #fff;
  }
  .media {
    padding: 0 60px 0 60px;
    height: @contact-top-section-media-row-height;
  }
  .media-heading {
    font-weight: bold;
  }
}

.contact-menu {
  text-align: center;
  text-transform: uppercase;
}
a.contact-menu-option {
  padding: @contact-top-section-menu-padding-top-bottom 0;
  line-height: @contact-top-section-menu-line-height;
  color: #fff;
  text-decoration: none;
  &.active {
    font-weight: bold;
    box-shadow: inset 0 -4px 0 0 #fdd835;
  }
}

.contact-info {
  padding: 15px 45px;
  position: relative;
  height: calc(~"100% - "@contact-top-section-height);
  label {
    color: @grey-400;
    font-weight:normal;
  }
  p {
    background-image: none;
  }
}

.activity-menu {
  font-size: 0;
  margin: 15px 0 25px;
  padding: 0;
}
.activity-menu li {
  display: inline-block;
  border-style: solid;
  border-color: @brand-primary;
  border-width: 1px 0 1px 1px;
  font-size: 13px;
  border-radius: 0;
  padding: 7px 12px;
  color: @brand-primary;
  cursor: pointer;

  &.active {
    background-color: @brand-primary;
    font-weight: bold;
    color: #fff;
  }
  &:first-child {
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
  }
  &:last-child {
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
    border-right-width: 1px;
  }
}

.contact-activity-log {
  position: relative;
  height: calc(~"100% - "@contact-top-section-height);
}

.contact-activity-log hr {
  margin-top: 10px;
  margin-bottom: 10px;
}

.contact-activity-log .btn {
  text-transform: none;
}

.contact-activity-log .medialist-select {
  margin-left: 20px;
  font-size: 12px;
  color: @grey-400;
  .dropdown-toggle {
    text-transform: none;
    padding: 10px;
  }
}

.contact-activity-posts-select {
  background-color: @grey-100;
  .dropdown-toggle {
    text-transform: none;
  }
}

.contact-activity-posts {
  padding: 15px;
  background-color: @grey-100;
}

.btn-group.btn-flat {
  box-shadow: none;
}

.contenteditable-container, .form-control.contenteditable-container {
  height: 44px;
  overflow-y: auto;
  &.open {
    height: 64px;
  }
  &::webkit-input-placeholder {
    color: @grey-500;
  }
  resize: none;
}

.placeholder {
  color: @grey-500;
}

.status, .btn.status {
  font-weight: bold;
}
.status.status-to-contact, .btn.status.status-to-contact {
  color: @grey-600;
}
.status.status-contacted, .btn.status.status-contacted {
  color: @light-blue-600;
}
.status.status-not-interested, .btn.status.status-not-interested {
  color: @red-600;
}
.status.status-hot-lead, .btn.status.status-hot-lead {
  color: @orange-600;
}
.status.status-completed, .btn.status.status-completed {
  color: @green-600;
}
.status .caret, .btn.status .caret {
  color: @gray-dark;
}

.spinner-box {
  height: 100px;
  width: 100%;
  position: relative;
}

